--- a/payments-ui-core/res/values/donottranslate.xml
+++ b/payments-ui-core/res/values/donottranslate.xml
@@ -12,6 +12,7 @@
     <string name="stripe_paymentsheet_payment_method_clearpay">Clearpay</string>
     <string name="stripe_paymentsheet_payment_method_paypal">PayPal</string>
     <string name="stripe_paymentsheet_payment_method_us_bank_account">US Bank Account</string>
+    <string name="stripe_paymentsheet_payment_method_instant_debits">Bank</string>
     <string name="stripe_paymentsheet_payment_method_upi">UPI</string>
     <string name="stripe_paymentsheet_payment_method_cashapp">Cash App Pay</string>
     <string name="stripe_paymentsheet_payment_method_grabpay">GrabPay</string>
