--- a/financial-connections/res/values/themes.xml
+++ b/financial-connections/res/values/themes.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="StripeBaseTheme" parent="@style/Theme.AppCompat.DayNight.NoActionBar">
+    <style name="StripeFinancialConnectionsBaseTheme" parent="@style/Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorAccent">@color/stripe_accent_color_default</item>
         <item name="colorControlNormal">@color/stripe_control_normal_color_default</item>
         <item name="colorPrimary">@color/stripe_toolbar_color_default</item>
         <item name="colorPrimaryDark">@color/stripe_toolbar_color_default_dark</item>
         <item name="titleTextColor">@color/stripe_title_text_color</item>
         <item name="android:textColorSecondary">@color/stripe_text_color_secondary</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowAnimationStyle">@null</item>
     </style>
 
-    <style name="StripeDefaultTheme" parent="StripeBaseTheme" />
+    <style name="StripeFinancialConnectionsDefaultTheme" parent="StripeFinancialConnectionsBaseTheme">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+    </style>
 </resources>
