--- a/payments-ui-core/res/drawable/stripe_ic_paymentsheet_pm_bank.xml
+++ b/payments-ui-core/res/drawable/stripe_ic_paymentsheet_pm_bank.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="16dp"
-    android:height="16dp"
-    android:viewportWidth="16"
-    android:viewportHeight="16">
+    android:width="18dp"
+    android:height="18dp"
+    android:viewportWidth="18"
+    android:viewportHeight="18">
   <path
-      android:pathData="M5,7.5V14H6.5V7.5H9.5V14H11V7.5H14V14H14.9998C15.5521,14 15.9998,14.4477 15.9998,15V16H0.0002V15C0.0002,14.4477 0.4479,14 1.0002,14H2V7.5H5ZM8,0C12.681,2.5719 15.181,3.9499 15.4998,4.134C15.9781,4.4101 16.142,5.0217 15.8659,5.5C15.6774,5.8265 15.3326,6.0064 14.9807,6H1.0193C0.6674,6.0064 0.3226,5.8265 0.1341,5.5C-0.142,5.0217 0.0219,4.4101 0.5002,4.134C0.819,3.9499 3.319,2.5719 8,0Z"
-      android:fillColor="#FF000000"
+      android:pathData="M5.625,8.438V15.75H7.313V8.438H10.688V15.75H12.375V8.438H15.75V15.75H16.875C17.496,15.75 18,16.254 18,16.875V18H0V16.875C0,16.254 0.504,15.75 1.125,15.75H2.25V8.438H5.625ZM9,0C14.266,2.893 17.079,4.444 17.437,4.651C17.975,4.961 18.16,5.649 17.849,6.188C17.637,6.555 17.249,6.757 16.853,6.75H1.147C0.751,6.757 0.363,6.555 0.151,6.188C-0.16,5.649 0.025,4.961 0.563,4.651C0.921,4.444 3.734,2.893 9,0Z"
+      android:fillColor="#000000"
       android:fillType="evenOdd"/>
 </vector>
