Tweak bank form in PaymentSheet
- Use non-padded Stripe Bank icon
- Make icon smaller and adjust spacing around it
- Increase line spacing in mandate text
- Add space before last4
- Use `IconButton` instead of `Image`

--- a/payments-core/res/drawable/stripe_ic_bank_stripe.xml
+++ b/payments-core/res/drawable/stripe_ic_bank_stripe.xml
@@ -1,16 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="56dp"
-    android:height="40dp"
-    android:viewportWidth="56"
-    android:viewportHeight="40">
-    <group>
-        <clip-path android:pathData="M14,6.5h27v27h-27z" />
-        <path
-            android:pathData="M14,6.5H41V33.5H14V6.5Z"
-            android:fillColor="#6772E5"
-            android:fillType="evenOdd" />
-        <path
-            android:pathData="M26.285,16.903C26.285,16.245 26.825,15.992 27.719,15.992C29.002,15.992 30.613,16.38 31.896,17.072V13.107C30.495,12.558 29.111,12.339 27.719,12.339C24.302,12.339 22.024,14.119 22.024,17.106C22.024,21.747 28.428,21.013 28.428,23.012C28.428,23.788 27.753,24.042 26.808,24.042C25.416,24.042 23.627,23.468 22.21,22.692V26.699C23.779,27.374 25.365,27.661 26.808,27.661C30.31,27.661 32.714,25.932 32.714,22.911C32.706,17.899 26.285,18.785 26.285,16.903V16.903Z"
-            android:fillColor="#ffffff" />
-    </group>
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
+    <path
+        android:pathData="M2,0L30,0A2,2 0,0 1,32 2L32,30A2,2 0,0 1,30 32L2,32A2,2 0,0 1,0 30L0,2A2,2 0,0 1,2 0z"
+        android:fillColor="#6772E5" />
+    <path
+        android:pathData="M14.563,12.328C14.563,11.549 15.202,11.25 16.259,11.25C17.776,11.25 19.692,11.709 21.209,12.527V7.837C19.552,7.178 17.916,6.919 16.259,6.919C12.208,6.919 9.513,9.035 9.513,12.567C9.513,18.076 17.098,17.198 17.098,19.573C17.098,20.491 16.299,20.79 15.182,20.79C13.525,20.79 11.41,20.111 9.733,19.193V23.944C11.589,24.742 13.465,25.081 15.182,25.081C19.333,25.081 22.187,23.025 22.187,19.453C22.167,13.505 14.563,14.563 14.563,12.328Z"
+        android:fillColor="#ffffff" />
 </vector>
