CardBrandView rebuild initial

--- a/payments-core/res/layout/stripe_card_multiline_widget.xml
+++ b/payments-core/res/layout/stripe_card_multiline_widget.xml
@@ -28,12 +28,12 @@
 
         </com.stripe.android.view.CardNumberTextInputLayout>
 
-        <com.stripe.android.view.CardBrandView
+        <com.stripe.android.view.CardBrandViewRebuild
             android:id="@+id/card_brand_view"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/stripe_card_brand_view_height"
             android:layout_marginTop="@dimen/stripe_card_icon_padding"
-            android:layout_marginBottom="@dimen/stripe_card_icon_padding"
+            android:layout_marginBottom="5dp"
             android:layout_marginEnd="@dimen/stripe_card_icon_padding"
             android:layout_gravity="center_vertical|end" />
 
