--- a/payments-core/res/layout/stripe_select_card_brand_view.xml
+++ b/payments-core/res/layout/stripe_select_card_brand_view.xml
@@ -7,6 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="16sp"
         android:text="@string/stripe_card_brand_choice_selection_header"/>
 
 </LinearLayout>
