--- a/paymentsheet/res/values/donottranslate.xml
+++ b/paymentsheet/res/values/donottranslate.xml
@@ -14,4 +14,6 @@
     <string name="stripe_paymentsheet_bacs_support_default_email">support@stripe.com</string>
     <string name="stripe_paymentsheet_bacs_support_default_address_line_one">Stripe, 7th Floor The Bower Warehouse</string>
     <string name="stripe_paymentsheet_bacs_support_default_address_line_two">207–211 Old St, London EC1V 9NR</string>
+
+    <string name="stripe_paymentsheet_invalid_deferred_intent_usage">It appears you are reusing an intent on every `createIntentCallback` call. You should either create a brand new intent in `createIntentCallback` or update the existing intent with the new payment method ID.</string>
 </resources>
