Test harness visibility changes

--- a/3ds2sdk/res/layout/stripe_challenge_fragment.xml
+++ b/3ds2sdk/res/layout/stripe_challenge_fragment.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ca_scroll_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,36 +14,38 @@
             android:id="@+id/ca_brand_zone"
             android:layout_width="match_parent"
             android:layout_height="@dimen/stripe_3ds2_brand_zone_max_height"
+            android:accessibilityTraversalBefore="@+id/ca_challenge_zone"
             android:gravity="center"
             android:orientation="horizontal"
-            tools:ignore="UnusedAttribute"
-            android:accessibilityTraversalBefore="@+id/ca_challenge_zone" />
+            tools:ignore="UnusedAttribute" />
 
-        <View style="@style/Stripe3DS2Divider"
+        <View
+            style="@style/Stripe3DS2Divider"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/stripe_3ds2_divider"/>
+            android:layout_height="@dimen/stripe_3ds2_divider" />
 
         <com.stripe.android.stripe3ds2.views.ChallengeZoneView
             android:id="@+id/ca_challenge_zone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:accessibilityTraversalAfter="@+id/ca_brand_zone"
+            android:accessibilityTraversalBefore="@+id/ca_information_zone"
             android:orientation="vertical"
             android:padding="@dimen/stripe_3ds2_challenge_activity_padding"
-            tools:ignore="UnusedAttribute"
-            android:accessibilityTraversalBefore="@+id/ca_information_zone"
-            android:accessibilityTraversalAfter="@+id/ca_brand_zone" />
+            tools:ignore="UnusedAttribute" />
 
-        <View style="@style/Stripe3DS2Divider"
+        <View
+            style="@style/Stripe3DS2Divider"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/stripe_3ds2_divider"/>
+            android:layout_height="@dimen/stripe_3ds2_divider" />
 
         <com.stripe.android.stripe3ds2.views.InformationZoneView
             android:id="@+id/ca_information_zone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:accessibilityTraversalAfter="@+id/ca_challenge_zone"
             android:padding="@dimen/stripe_3ds2_challenge_activity_padding"
-            tools:ignore="UnusedAttribute"
-            android:accessibilityTraversalAfter="@+id/ca_challenge_zone" />
+            tools:ignore="UnusedAttribute" />
 
     </LinearLayout>
 </ScrollView>
