--- a/stripe-connect-example/src/main/res/values/colors.xml
+++ b/stripe-connect-example/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="default_border_color">0xffa7e7fc</color>
-    <color name="default_background_color">0xffcbf5fd</color>
-    <color name="default_text_color">0xffcbf5fd</color>
+    <color name="default_border_color">#A7E7FC</color>
+    <color name="default_background_color">#CBF5FD</color>
+    <color name="default_text_color">#CBF5FD</color>
 </resources>
